log
Sat 24 Sep 2022 12:02:47 AM UTC: 
 tests:  1|8
total_score: 0/70
a56b6be
Sat 24 Sep 2022 12:52:17 AM UTC: 
 treemap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:17: error: ‘key2’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   45 |     Map->root = createTreeNode(key2, NULL);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:46:23: error: ‘key1’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   46 |     Map->root->left = createTreeNode(key1, NULL);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
995718f
Sat 24 Sep 2022 12:58:29 AM UTC: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:17: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = key2;
      |                 ^~~~
treemap.c:43:17: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:23: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = key1);
      |                       ^~~~
treemap.c:44:27: error: expected ‘;’ before ‘)’ token
   44 |     Map->root->left = key1);
      |                           ^
      |                           ;
treemap.c:44:27: error: expected statement before ‘)’ token
treemap.c:49:24: error: ‘createTreeNodekey2’ undeclared (first use in this function); did you mean ‘createTreeNode’?
   49 |     Map->root->right = createTreeNodekey2, NULL);
      |                        ^~~~~~~~~~~~~~~~~~
      |                        createTreeNode
treemap.c:49:42: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   49 |     Map->root->right = createTreeNodekey2, NULL);
      |                                          ^
treemap.c:49:42: error: statement with no effect [-Werror=unused-value]
treemap.c:49:48: error: expected ‘;’ before ‘)’ token
   49 |     Map->root->right = createTreeNodekey2, NULL);
      |                                                ^
treemap.c:49:48: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
308fd18
Sat 24 Sep 2022 12:58:57 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:32: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = createTreeNode(key2, NULL);
      |                                ^~~~
treemap.c:43:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:23: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = key1);
      |                       ^~~~
treemap.c:44:27: error: expected ‘;’ before ‘)’ token
   44 |     Map->root->left = key1);
      |                           ^
      |                           ;
treemap.c:44:27: error: expected statement before ‘)’ token
Compilation failed
2b78684
Sat 24 Sep 2022 12:59:33 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:17: error: ‘key2’ undeclared (first use in this function)
   43 |     Map->root = key2;
      |                 ^~~~
treemap.c:43:17: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:23: error: ‘key1’ undeclared (first use in this function)
   44 |     Map->root->left = key1;
      |                       ^~~~
Compilation failed
32c3fac
